<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/colour_purple_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/single_user_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/single_user_friends_num"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alegreya_sans_medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/total_friends"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_user_image" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/single_user_image"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_user_friends_num">

        <TextView
            android:id="@+id/single_user_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="3"
            android:fontFamily="@font/alegreya_sans_medium"
            android:maxLines="3"
            android:text="@string/none"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/hybrid_detected_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="serif"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/detect_language"
                android:textColor="@color/orange_pangolin" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/hybrid_detected_language"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/orange_pangolin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/arrow"
                android:fontFamily="serif"
                android:text="@string/en"
                android:textColor="@color/orange_pangolin" />

            <TextView
                android:id="@+id/single_user_send_lovely"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/alegreya_sans_medium"
                android:foreground="@drawable/round_selector"
                android:text="@string/zero"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/ic_heart" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/single_user_if_i_send_lovely"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                android:layout_toStartOf="@+id/single_user_send_lovely"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/darkPurple_Item"
                app:civ_border_width="1dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/hybrid_translated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="3"
            android:fontFamily="@font/alegreya_sans_medium"
            android:maxLines="3"
            android:text="@string/none"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/fm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/single_user_follow_lyt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/aldrich"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/single_user_send_friend_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/colour_dark_button"
                    android:fontFamily="@font/aldrich"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/send_friend"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/single_user_revoke_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/colour_dark_button"
                    android:fontFamily="@font/aldrich"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/revoke_friend"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_following_since"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/single_user_following_since_tv"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd=".5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/aldrich"
                        android:gravity="center_vertical"
                        android:text="@string/zero"
                        app:drawableStartCompat="@drawable/ic_following"
                        app:drawableTint="@color/orange_pangolin" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/single_user_unfollow_btn"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart=".5dp"
                        android:layout_weight="1"
                        android:background="@drawable/colour_dark_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/aldrich"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/unfriend"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bicubik"
            android:padding="10dp"
            android:text="@string/some_posts_maybe_hidden"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/amount_of_text_size" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>